# VisualIGTClient

./: CMakeLists.txt  IGTLinkClientWidget.cpp  IGTLinkClientWidget.h  IGTLinkClientWidget.qrc  IGTLinkClientWidget.ui  IGTLinkClinet.cpp  IGTLinkClinet.h  IGTLinkClinet.ui  README.md  VisualBrainLabClient.cpp  VisualBrainLabClient.h  VisualBrainLabClientWidget.cpp  VisualBrainLabClientWidget.h  VisualBrainLabClientWidget.ui  VisualBrainLabType.h  VisualIGTLinkClientWidget.cpp  VisualIGTLinkClientWidget.h  VisualIGTLinkClientWidget.ui  VisualOpenIGTLinkClient.cpp  VisualOpenIGTLinkClient.h  main.cpp
